# pipefy-repo

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/clientes/: models.py  repository.py  router.py  schemas.py  service.py
app/core/: config.py  constants.py  database.py
app/pipefy/: client.py  dependencies.py
app/pipefy/webhooks/: repository.py  router.py  schemas.py  service.py
app/webhooks/: auth.py  models.py  repository.py  router.py  schemas.py  service.py
scripts/: init.sh  test.sh
tests/: conftest.py  test_clientes.py  test_webhooks.py
